--- a/WpfDBViewer/MainWindow.xaml
+++ b/WpfDBViewer/MainWindow.xaml
@@ -16,6 +16,10 @@
     </Window.Resources>
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.05*"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -23,10 +27,18 @@
         </Grid.ColumnDefinitions>
 
         <Menu Grid.ColumnSpan="2" Height="20" VerticalAlignment="Top">
-            <MenuItem Header="Item">
-                <MenuItem Header="Test" Click="Button_Click"/>
+            <MenuItem Header="Создать">
+                <MenuItem Header="Бд" Click="CreateDBWindow"/>
+                <MenuItem Header="Таблицу" Click="CreateTableWindow"/>
             </MenuItem>
+            <MenuItem Header="Открыть бд" Click="OpenDb"/>
         </Menu>
+
+        <ListBox x:Name="DbTree" Grid.Row="1">
+            
+        </ListBox>
+
+        <!--<Button Click="ShowDbName" Height="25" Width="100" Content="Show"/>-->
         
         <!--<ListBox Grid.Column="0" ItemsSource="{Binding Phones}"
                  SelectedItem="{Binding SelectedPhone}">
